--- a/_posts/2024-11-21-book4_chapter8-9.markdown
+++ b/_posts/2024-11-21-book4_chapter8-9.markdown
@@ -5,8 +5,6 @@ date:   2024-11-11 19:02:31 +0900
 categories: ML Advanced_Session
 ---
 
-![선형 판별 분석](/assets/img/sample/78.png)
-
 # 통계 모형화
 
 ## 선형회귀 원리와 확장
@@ -22,15 +20,21 @@ categories: ML Advanced_Session
 * 아래의 그림에서 기울기 b1, b2를 다중 회귀에서는 **편회귀계수**라 부릅니다.
 * 설명변수가 2개일 때 그래프를 그리면 회귀모형은 직선이 아닌 평면이 되는데, 이를 **회귀평면**이라 합니다.
 
+![다중선형회귀1](/assets/img/sample/다중선형회귀1.png)
+
 * 아래의 그림은 다중 회귀의 결과를 나타낸 그림입니다.
 * 아래의 표에서 주목해야 할 점은 추정된 **편회귀계수와 그 유의성**입니다.
 * 또한 R^2값과 마지막의 F통계량에서 얻은 p값에도 주목해야 하는데, 편회귀계수가 모두 0인 모형을 귀무가설로 하여, 회귀모형의 설명력의 유의성을 조사합니다.
+
+![다중선형회귀1](/assets/img/sample/다중회귀2.png)
 
 ### 편회귀계수
 * 회귀분석에서 구한 편회귀계수는 설명변수의 데이터 퍼짐 정도나 단위에 따라 크게 달라지기 때문에 편회귀계수끼리 비교할 수는 없습니다.
 * 편회귀계수를 비교하기 위해 **표준화편회귀계수**를 이용합니다.
 * 표준화편회귀계수는 회귀분석을 시행하기 전에 각각의 설명변수를 평균 0, 표준편차 1로 변환한 다음, 회귀분석을 시행하여 구한 회귀계수입니다.
 * 상관계수가 1에 가까운 강한 상관이 있을 때는, 뒤에 설명할 다중공선성이 있는지를 의심하고 이에 대처해야 합니다.
+
+![다중선형회귀1](/assets/img/sample/표준화편회귀.png)
 
 ### 범주형 변수를 설명변수로
 * 범주에는 대소 관계가 없으므로, 회귀분석의 설명변수로 이용할 때는 0 또는 1과 같은 **가변수**를 설명변수로 이용하는 등의 요령이 필요합니다.
@@ -43,6 +47,8 @@ categories: ML Advanced_Session
 * 공분산분석의 사용 조건은 다음과 같습니다.
 1. 집단 간 회귀의 기울기가 서로 다르지 않을 것입니다.
 2. 회귀계수가 0이 아니어야 합니다.
+
+![다중선형회귀1](/assets/img/sample/공분산분석.png)
 
 ### 고차원 데이터 문제
 * 차원이 늘어날수록 파라미터 추정에 필요한 데이터 양이 폭발적으로 증가한다는 문제가 있습니다.
@@ -81,5 +87,12 @@ categories: ML Advanced_Session
 * 또한 실제 데이터 해석에서 반응변수가 *예/아니오*와 같이 값이 2개인 변수이거나, 물건이나 생물의 수처럼 음이 아닌 정수인 상황에서는 **선형회귀가 적절하지 않습니다.**
 * 따라서 이러한 경우 일반화 선형모형 원리로써 확률분포를 적절하게 고려해 모형화할 필요가 있습니다.
 
+![다중선형회귀1](/assets/img/sample/선형회귀부적절.png)
+
 ### 가능도와 최대가능도 방법
 * 위의 식에서 P를 데이터 x에 대한 파라미터의 함수로 보고 **가능도**라고 합니다.
+* 가능도가 크다는 것은, 그 파라미터에서 얻은 데이터가 나타나기 쉽다는 뜻입니다.
+* 이렇게 가능도를 최대화하며 이를 추정값으로 삼으면 얻은 데이터에 가장 잘 들어맞는 파라미터를 정할 수 있습니다.
+* 이를 **최대 가능도 방법** 또는 **최대 가능도 추정** 이라 합니다.
+
+![다중선형회귀1](/assets/img/sample/최대가능도.png)
