--- a/_posts/2024-11-21-book4_chapter8-9.markdown
+++ b/_posts/2024-11-21-book4_chapter8-9.markdown
@@ -96,3 +96,57 @@ categories: ML Advanced_Session
 * 이를 **최대 가능도 방법** 또는 **최대 가능도 추정** 이라 합니다.
 
 ![다중선형회귀1](/assets/img/sample/최대가능도.png)
+
+### 로지스틱 회귀
+* 로지스틱 회귀는 반응변수가 값이 2개인 범주형 변수일 때 사용하는 회귀입니다.
+* 범주 하나가 일어날 확률을 p로 두고, 설명변수 x가 바뀌었을 때 p가 얼마나 달라지는 지를 조사합니다.
+
+![다중선형회귀1](/assets/img/sample/로지스틱회귀.png)
+
+* 로지스틱 회귀에 사용한 이산형 확률분포를 **이항분포**라고 합니다.
+* 아래의 우변을 **로짓 함수**라고 부르며, 일반화선형모형에서 좌변을 **선형예측변수**라고 하며, 선형예측변수와 반응변수의 확률분포 파라미터를 잇는 함수를 **연결함수**라 합니다.
+
+![다중선형회귀1](/assets/img/sample/로짓함수.png)
+
+### 푸아송 회귀
+* 데이터가 음수가 되지 않는 정수일 때, 특히 반응변수가 개수인 경우 고려해볼 수 있는 일반화 선형모형이 바로 **푸아송 회귀**입니다.
+* **푸아송 분포**란 낮은 확률로 일어나는 무작위 사건에 대해, 평균이 i번일 때 몇 번 일어나는지를 나타내는 확률분포입니다.
+
+## 통계 모형의 평가와 비교
+
+### 왈드 검정
+* 최대가능도 방법으로 얻은 추정값/표준오차를 **왈드 통계량**이라 합니다.
+* 이러한 검정 방법을 **왈드 검정**이라 합니다.
+
+### 가능도비 검정
+* 가능도비 검정을 시도하기 위해서는 비교할 2개의 모형 중 어느 한쪽이 다른 한쪽을 포함하는 관계여야 합니다.
+* 어떤 가정하에 무작위로 데이터를 생성하고 추정량의 성질을 조사하는 방법을 **부트스트랩 방법**이라 합니다.
+
+# 가설검정의 주의점
+
+## 재현성
+
+### 가설검정, 이해는 어렵지만 시행은 간단
+* 이치를 제대로 이해하지 않아도, 선행 연구를 모방하여 가설검정을 시행, p<0.05를 얻기만 하면 그만이라 여기는 사용자가 많다는 실정입니다.
+* 이로 인해 **재현성 위기**라는 중대한 문제가 일어난다고 합니다.
+
+### 재현성 위기
+* 재현성이란 누가 언제 어디서 실험하더라도, 조건이 동일하다면 동일한 결과를 얻을 수 있어야 한다는 것입니다.
+* 재현성이 없다는 것은 원래 논문의 주장이 잘못되었을 가능성이 있다는 것을 의미합니다.
+* 이 문제를 **재현성 위기**라 합니다.
+
+![다중선형회귀1](/assets/img/sample/재현성위기.png)
+
+* 낮은 재현성을 초래하는 또 하나의 주 원인은, 가설검정의 사용 방법에 있다고 여겨집니다.
+* 놀랍게도, 가설검정 사용 방법에 따라 p값이 0.05보다 작아지게 조작하는 것이 가능합니다.
+* 이렇게 자신에게 유리하도록 p값을 조작하는 행위를 **p-해킹**이라고 합니다.
+
+### 가설검정의 문제점
+* 가설검정의 원리와 p값을 이해하지 못한 채 사용하는 사람이 많다는 것입니다.
+
+### 베이즈 인수
+* 가설검정에서 귀무가설의 지지와 관련된 문제의 해결책 중 하나로, p값 대신 사용하는 **베이즈 인수**라는 지표가 있습니다.
+* 가설을 수학적으로 나타낸 것을 모형이라 할 때, 어떤 모형 M이 얻은 데이터 x를 설명하는 데 얼마나 적절한지는 **주변 가능도** 또는 **에비던스**라는 식으로 나타냅니다.
+
+### p-해킹
+* **p-해킹**이란 의도하든, 의도하지 않든 p값을 원하는 방향으로 조작하는 행위입니다.
