--- a/_posts/2024-07-25-book1_chapter02.markdown
+++ b/_posts/2024-07-25-book1_chapter02.markdown
@@ -3,6 +3,11 @@ layout: post
 title:  "Chapter 02. 모집단과 표본추출"
 date:   2024-07-19 21:14:31 +0900
 categories: ML Session
+toc: true
+pin: true
+image:
+  path: thumbnail.png
+  alt: image alternative text
 ---
 
 * 진도: 183p~
