--- a/_posts/2024-07-27-book2_chapter01.markdown
+++ b/_posts/2024-07-27-book2_chapter01.markdown
@@ -3,6 +3,11 @@ layout: post
 title:  "Chapter 01. 인공지능과 머신러닝, 딥러닝"
 date:   2024-07-27 21:14:31 +0900
 categories: ML Session
+toc: true
+pin: true
+image:
+  path: thumbnail.png
+  alt: image alternative text
 ---
 
 * 진도: 55~
