--- a/_posts/2024-08-04-book2_chapter03.markdown
+++ b/_posts/2024-08-04-book2_chapter03.markdown
@@ -3,6 +3,11 @@ layout: post
 title:  "8.04 Chapter 03"
 date:   2024-08-04 21:14:31 +0900
 categories: ML Session
+toc: true
+pin: true
+image:
+  path: thumbnail.png
+  alt: image alternative text
 ---
 
 # 회귀 알고리즘과 모델 규제
